force-app/main/default/objects/Call__c/Call__c.object-meta.xml
<CustomObject>
    <label>Call</label>
    <nameField>
        <displayFormat>CL{0000}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>