force-app/main/default/objects/Call__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anil</fullName>
            </value>
            <value>
                <fullName>Kumar</fullName>
            </value>
            <value>
                <fullName>Harish</fullName>
            </value>
            <value>
                <fullName>Shebin</fullName>
            </value>
            <value>
                <fullName>Ashish</fullName>
            </value>
            <value>
                <fullName>Manu</fullName>
            </value>
            <value>
                <fullName>Shaam</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>Samuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>