force-app/main/default/objects/Call__c/fields/Duration_seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_seconds__c</fullName>
    <label>Duration(seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>