force-app/main/default/objects/Call__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Call</relationshipLabel>
    <relationshipName>Call</relationshipName>
    <type>Lookup</type>
</CustomField>