force-app/main/default/objects/Call__c/fields/Recording_File__c.field-meta.xml
<CustomField>
    <fullName>Recording_File__c</fullName>
    <label>Recording File</label>
    <type>Url</type>
</CustomField>