force-app/main/default/objects/Call__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Call</relationshipLabel>
    <relationshipName>Call</relationshipName>
    <type>Lookup</type>
</CustomField>