force-app/main/default/objects/Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Agent_Name__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Call_Status__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Duration_seconds__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Recording_File__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>